# Chat

./: .gitignore  Cargo.toml  README.md  build.rs  initialize.sql  notes.txt  protocol.txt  references.txt
client/: package-lock.json  package.json  vue.config.js
client/public/: channel.html  index.html  login.html  with_session.html  without_session.html
client/src/: App.vue
client/src/components/: Channel.vue  ChannelCreate.vue  ChannelCreateDialog.vue  ChannelCreateModal.vue  ChannelCreateOrRenameDialog.vue  ChannelDeleteDialog.vue  ChannelList.vue  ChannelTitle.vue  Disconnected.vue  Group.vue  GroupCreateDialog.vue  GroupCreateOrRenameDialog.vue  GroupDeleteDialog.vue  GroupLeaveDialog.vue  GroupList.vue  GroupTitle.vue  HelloWorld.vue  InviteDialog.vue  Login.vue  Message.vue  MessageList.vue  MessageSender.vue  ModalDialog.vue  NoGroups.vue  NoGroupsDialog.vue  Popper.vue  ProfileNav.vue  StatusMessage.vue  User.vue  UserDeleteDialog.vue  UserList.vue  UserRenameDialog.vue  UserTitle.vue
client/src/scss/: colors.scss  common.scss  custom.scss
docs/: design_r0.md  design_r1.md  notes.txt  protocol.txt  references.txt  report.md  task_list.md
docs/database/: er_diagram.uxf
docs/devlog/: 2020-11-17.md  2020-12-30.md  2021-01-06.md  2021-01-08.md  2021-01-10.md
docs/progress/: 2020-11-17.md  2020-12-26.md  2020-12-27.md  2020-12-28.md  2020-12-29.md  2020-12-31.md  2021-01-02.md  2021-01-03.md  2021-01-04.md  2021-01-05.md  2021-01-07.md  2021-01-08.md  2021-01-09.md  2021-12-01.md
img/user/: .gitignore
src/: error.rs  filters.rs  handlers.rs  main.rs
src/database/: channel.rs  group.rs  membership.rs  message.rs  mod.rs  session.rs  strings.rs  user.rs
src/handlers/: auth.rs  channel.rs  group.rs  hello.rs  invite.rs  login.rs  me.rs  messages.rs  mod.rs  root_with_session.rs  session.rs  socket.rs  user.rs
src/handlers/socket/: handler.rs  mod.rs  upgrade.rs
src/socket/: handler.rs  mod.rs  upgrade.rs
src/utils/: mod.rs  png.rs  random.rs  warp.rs
templates/: hello.html
tls/: localhost.crt  localhost.key  note.txt
(+7 files in other folders)
