[package]
name = "chat"
version = "0.1.0"
authors = ["Kerndog73 <kerndog73@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
log = "0.4"
pretty_env_logger = "0.4"
askama = "0.10"
askama_warp = "0.10"
# Using tokio-postgress 0.5 because it uses tokio 0.2.
# Later versions have switched to tokio 0.3 but
# warp is not compatible with tokio 0.3
tokio-postgres = { version = "0.5", features = ["with-chrono-0_4"] }
deadpool-postgres = { version = "0.5" }
serde = { version = "1.0", features = ["derive"] }

# I'm considering using rocket due to the amount of boilerplate required to
# get the database working.

[profile.release]
lto = true

# Separate repos for client and server
# or maybe a client subdirectory...